fix: alignment issues in shop page

--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,14 @@
     }
 }
 
-/* iPad Pro / tablet grid layout: 2 columns for products only in this range */
-@media screen and (min-width: 1024px) and (max-width: 1199px) {
+@media screen and (width: 1024px) and (height: 1366px) {
     .products-grid {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr) !important;
+    }
+}
+
+@media screen and (min-width: 1280px) and (max-width: 1540px) {
+    .products-grid {
+        grid-template-columns: repeat(3, 1fr) !important;
     }
 }
